# blog-project

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: .env.example  Cargo.toml  build.rs
blog-server/migrations/: 20260421000001_create_users.sql  20260421000002_create_posts.sql
blog-server/src/: main.rs  test_mocks.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: mod.rs  post_repository.rs  postgres_post_repository.rs  postgres_user_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  jwt.rs  logging.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: lib.rs
docker/: docker-compose.yml
docker/postgres/: .env.example  init-db.sh
