[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"
description = "Client library for the blog API supporting HTTP and gRPC transports"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-trait = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"
